# gtest_min_sample

./: CMakeLists.txt  README.md  gtest_main.cc
foo/: CMakeLists.txt  foo.cc  foo.h  foo.h~  foo_test.cc
